<resources>
    <string name="app_name">Challenge: Accepted</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="loginTitle">Login</string>
    <string name="createUserTitle">Create User</string>
    <string name="loginMainSentence">Please enter your email and password.</string>
    <string name="emailTitle">Email</string>
    <string name="passwordTitle">Password</string>
    <string name="loginButton">Login</string>
    <string name="createUserMainSentence">Please enter your details below.</string>
    <string name="firstNameTitleCreateUser">First Name</string>
    <string name="surnameTitleCreateUser">Surname</string>
    <string name="confirmPasswordTitleCreateUser">Confirm Password</string>
    <string name="createUserButton">Create User</string>
    <string name="createUserAndLoginButton"><![CDATA[Create User & Login]]></string>
    <string name="welcomeTextView">Welcome</string>
    <string name="createGame">Games</string>
    <string name="challengeButton">Challenges</string>
    <string name="playersButton">Players</string>
    <string name="title_activity_my_games">MyGamesActivity</string>
    <string name="title_activity_create_challenge">Create Challenge</string>
    <string name="noGamesTextView">You are currently not taking part in any games.</string>
    <string name="myGamesHeaderTextView">My Games</string>
    <string name="createGameHeaderTectView">Create Game</string>
    <string name="selectPlayersTextView">Select Players</string>
    <string name="gameTitleTextView">Game Title:</string>
    <string name="gameTargetScoreTextView">Target Score:</string>
    <string name="createGameButton">Create Game</string>
    <string name="gameCreatedByLabelTextView">Created By:</string>
    <string name="gameCreatedLabelTextView">Created:</string>
    <string name="gameWinnerLabelTextView">Winner:</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="noChallengesTextView">You currently have no challenges</string>
    <string name="noPlayersAddPlayerTextView">There are currently no players available for selection.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="createChallengeTextView">Create Challenge</string>
    <string name="setMaxScoreValueTextView">Set max points value</string>
    <string name="createChallengeButton">Create Challenge</string>
    <string name="editChallengeButton">Edit Challenge</string>
    <string name="myChallengesHeaderTextView">My Challenges</string>
    <string name="challengeCreatedByLabelTextView">Created By</string>
    <string name="challengeCreatedLabelTextView">Created:</string>
    <string name="challengeSubjectLabelTextView">Subject:</string>
    <string name="challengeMessageLabelTextView">Message</string>
    <string name="pushChallengeHeaderTextView">Push A Challenge</string>
    <string name="selectAChallengeLabelTextView">Please select a challenge</string>
    <string name="selectAPlayerLabelTextView">Please select a player</string>
    <string name="pushChallengeButton">Push Challenge</string>
    <string name="title_activity_edit_challenge">Edit Challenge</string>
    <string name="editChallengeTextView">Edit Challenge</string>
    <string name="challengeReceiverLabelTextView">Receiver:</string>
    <string name="challengeStatusLabelTextView">Status:</string>
    <string name="challengePointsAwardedLabelTextView">Points Awarded:</string>
    <string name="challengePointsAwardedValueTextView">No points awarded</string>
    <string name="challengeStatusValueTextView">Not yet attempted</string>
    <string name="outboxHeaderTextView">Outbox</string>
    <string name="acceptedChallengesHeaderTextView">Accepted Challenges</string>
    <string name="declinedChallengesHeaderTextView">Declined Challenges</string>
    <string name="inboxHeaderTextView">Inbox</string>
    <string name="scoreboardHeaderTextView">Scoreboard</string>
    <string name="challengeContactInReceiverAddressBookLabelTextView">Receiver\'s Challenge Contact:</string>
    <string name="challengeContactInAddressBookLabelTextView">Challenge Contact:</string>
    <string name="challengeContactInReceiverAddressBookValueTextView">Challenge was declined or not yet attempted</string>
    <string name="challengeMaxScoreLabelTextView">Maximun Points Value: </string>
    <string name="challengeSenderLabelTextView">Sender:</string>
    <string name="logOutMenuItem">Log Out</string>
    <string name="createGameMenuItem">Create Game</string>
    <string name="backToMyGamesMenuItem">Back to My Games</string>
    <string name="createChallengeMenuItem">Create Challenge</string>
    <string name="resetDatabase">Reset Database (for testing purposes)</string>
    <string name="backMenuItem">Back</string>
    <string name="notYetAttemptedValue">Not yet attempted</string>
    <string name="attemptChallengeButton">Attempt Challenge</string>
    <string name="maxScoreValueTextView">Max Score Value</string>
    <string name="declineChallengeButton">Decline Challenge</string>
    <string name="maxScoreLabelTextView">Max Score</string>
    <string name="attemptChallengeTextView">Attempt Challenge</string>
    <string name="oneOfTheFollowingContactsTextView">This challenge (if accepted) will be sent to one of the following contacts in your addess book</string>
    <string name="contact1TextView">Contact 1</string>
    <string name="contact2TextView">Contact 2</string>
    <string name="contact3TextView">Contact 3</string>
    <string name="title_activity_attempt_challenge">Attempt Challenge</string>
    <string name="attemptSmsMessageSubjectTextView">Subject Value</string>
    <string name="scoreboardPlayerEmailLabelTextView">Player\'s email:</string>
    <string name="scoreboardPointsLabelTextView">Score:</string>
    <string name="scoreboardSubHeaderLabelTextView">Target Score:</string>
    <string name="addPlayerHeaderTextView">Add a player to this game</string>
    <string name="addPlayerSubHeaderLabelTextView">Please search for a player by either first name or last name. Only players who are not already participating in this game will be displayed.</string>
    <string name="addPlayerButton">Add a player/players</string>
    <string name="title_activity_add_player">Add a player</string>
    <string name="addPlayerMenuItem">Add a player</string>
</resources>
