<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:id="@+id/activity_game_push_challenge">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:id="@+id/pushChallengeHeaderTextView"
        android:text="@string/pushChallengeHeaderTextView" />


    <TextView
        android:text="@string/selectAChallengeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pushChallengeHeaderTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:id="@+id/selectAChallengeLabelTextView"
        android:textStyle="normal|bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/selectAChallengeSpinner"
        android:layout_below="@+id/selectAChallengeLabelTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/selectAPlayerLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectAPlayerLabelTextView"
        android:layout_below="@+id/selectAChallengeSpinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:textStyle="normal|bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/selectAPlayerSpinner"
        android:layout_below="@+id/selectAPlayerLabelTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/noChallengesTextView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:id="@+id/noChallengesTextView"
        android:textSize="14sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <Button
        android:text="@string/pushChallengeButton"
        android:layout_width="140dp"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:id="@+id/pushChallengeButton"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/selectAPlayerSpinner"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light" />
</RelativeLayout>


