<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/transparent"
    tools:context="ie.dodwyer.fragments.CreateUserFragment">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEditTextCreateUser"
        android:textColorLink="?android:attr/colorAccent"
        android:layout_below="@+id/emialTitleLogin"
        android:layout_alignStart="@+id/emialTitleLogin"
        android:layout_alignEnd="@+id/createUserMainSentenceTextView" />

    <TextView
        android:text="@string/firstNameTitleCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditTextCreateUser"
        android:layout_alignStart="@+id/emailEditTextCreateUser"
        android:id="@+id/firstNameTitleCreateUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstNameEditTextCreateUser"
        android:layout_below="@+id/firstNameTitleCreateUser"
        android:layout_alignStart="@+id/firstNameTitleCreateUser"
        android:layout_alignEnd="@+id/emailEditTextCreateUser" />

    <TextView
        android:text="@string/surnameTitleCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameEditTextCreateUser"
        android:layout_alignStart="@+id/firstNameEditTextCreateUser"
        android:id="@+id/surnameTitleCreateUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/surnameTitleCreateUser"
        android:layout_alignStart="@+id/surnameTitleCreateUser"
        android:id="@+id/surnameEditTextCreateUser"
        android:layout_alignEnd="@+id/firstNameEditTextCreateUser" />

    <TextView
        android:text="@string/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTitleCreateUser"
        android:layout_below="@+id/surnameEditTextCreateUser"
        android:layout_alignStart="@+id/surnameEditTextCreateUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditTextCreateUser"
        android:layout_below="@+id/passwordTitleCreateUser"
        android:layout_alignStart="@+id/passwordTitleCreateUser"
        android:layout_alignEnd="@+id/surnameEditTextCreateUser" />

    <TextView
        android:text="@string/confirmPasswordTitleCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditTextCreateUser"
        android:layout_alignStart="@+id/passwordEditTextCreateUser"
        android:id="@+id/confirmPasswordTitleCreateUser" />

    <TextView
        android:id="@+id/createUserMainSentenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/createUserMainSentence"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordEditTextCreateUser"
        android:layout_below="@+id/confirmPasswordTitleCreateUser"
        android:layout_alignStart="@+id/confirmPasswordTitleCreateUser"
        android:layout_alignEnd="@+id/passwordEditTextCreateUser" />

    <TextView
        android:text="@string/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emialTitleLogin"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/createUserMainSentenceTextView"
        android:layout_alignStart="@+id/createUserMainSentenceTextView" />

    <Button
        android:text="@string/createUserButton"
        android:layout_width="120dp"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:id="@+id/createUserButton"
        android:layout_below="@+id/confirmPasswordEditTextCreateUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textColor="@color/colorPrimaryLight" />

<!--    <ProgressBar
        android:id="@+id/createUserProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />-->

</RelativeLayout>
