<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.dodwyer.fragments.LoginFragment"
    android:background="@android:color/transparent"
    >


    <TextView
        android:text="@string/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/emailTitleLogin"
        android:layout_below="@+id/loginMainSentence"
        android:layout_alignStart="@+id/emailEditTextLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/emailEditTextLogin"
        android:textColorLink="?android:attr/colorAccent"
        android:layout_below="@+id/emailTitleLogin"
        android:layout_alignStart="@+id/loginMainSentence"
        android:layout_alignEnd="@+id/loginMainSentence" />


    <TextView
        android:text="@string/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTitleLogin"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/emailEditTextLogin"
        android:layout_alignStart="@+id/emailEditTextLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordEditTextLogin"
        android:layout_below="@+id/passwordTitleLogin"
        android:layout_alignEnd="@+id/loginMainSentence"
        android:layout_alignStart="@+id/passwordTitleLogin" />

    <Button
        android:text="@string/loginButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEditTextLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/loginMainSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/loginMainSentence"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black" />

<!--    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />-->
</RelativeLayout>
